--- a/Towny/src/main/resources/ChangeLog.txt
+++ b/Towny/src/main/resources/ChangeLog.txt
@@ -9479,6 +9479,9 @@ v0.92.0.11:
   - Fix permission regression from 0.100.1.1.
   - Add a wrapper for getting potion names post-1.20.4.
 0.100.1.6:
-  - API: Add TitleNotification object used by the PlayerEntersIntoTownBorder and PlayerExitsFromTownBorder events.
-    - Using them, plugins can alter what Title and Subtitle is shown when Towny has isUsingTitles enabled.
+  - API: Add TitleNotification object.
   - Add sanctioned towns hover component to nation status screen, courtesy of Fruitloopins with PR #7207.
+0.100.1.7:
+  - Fix Title/Subtitle notification regression from 0.100.1.7.
+  - API: Add TitleNotificationEvent.
+    - Used by other plugins to alter what Title and Subtitle is shown by Towny when using_titles is enabled.
